--- a/Blog/source/_posts/运行时之一：类与对象.md
+++ b/Blog/source/_posts/运行时之一：类与对象.md
@@ -187,7 +187,7 @@ Ivar * class_copyIvarList ( Class cls, unsigned int *outCount );
 
 `class_getClassVariable`函数，目前没有找到关于Objective-C中类变量的信息，一般认为Objective-C不支持类变量。注意，返回的列表不包含父类的成员变量和属性。
 
-Objective-C不支持往已存在的类中添加实例变量，因此不管是系统库提供的提供的类，还是我们自定义的类，都无法动态添加成员变量。但如果我们通过运行时来创建一个类的话，又应该如何给它添加成员变量呢？这时我们就可以使用`class_addIvar`函数了。不过需要注意的是，这个方法只能在`objc_allocateClassPair`函数与`objc_registerClassPair`之间调用。另外，这个类也不能是元类。成员变量的按字节最小对齐量是`1<<alignment`。这取决于ivar的类型和机器的架构。如果变量的类型是指针类型，则传递`log2(sizeof(pointer_type))`。
+Objective-C不支持往已存在的类中添加实例变量，因此不管是系统库提供的提供的类，还是我们自定义的类，都无法动态添加成员变量。但如果我们通过运行时来创建一个类的话，又应该如何给它添加成员变量呢？这时我们就可以使用`class_addIvar`函数了。不过需要注意的是，这个方法只能在`objc_allocateClassPair`函数与`objc_registerClassPair`之间调用。另外，这个类也不能是元类。
 
 `class_copyIvarList`函数，它返回一个指向成员变量信息的数组，数组中每个元素是指向该成员变量信息的`objc_ivar`结构体的指针。这个数组不包含在父类中声明的变量。`outCount`指针返回数组的大小。需要注意的是，我们必须使用`free()`来释放这个数组。
 
@@ -290,11 +290,246 @@ void objc_setFutureClass ( Class cls, const char *name );
 ```
 通常我们不直接使用这两个函数。
 
-### 动态穿件类和对象
-### 实例操作函数
-### 获取类定义
-## 小结
+#### 实例
+上面列举了大量类操作的函数，下面我们写个实例，来看看这些函数的实例效果：
+```objc
+- (void)classAssociatedOption
+{
+    NSLog(@"类相关操作===========\n");
+    NSMutableString *str = [NSMutableString stringWithString:@""];
+    //获取类名
+    const char *charName = class_getName(self.ps.class);
+    NSString *name = [NSString stringWithCString:charName encoding:NSUTF8StringEncoding];
+    [str appendFormat:@"获取类名:%@\n",name];
+    NSLog(@"=================\n");
+    //获取父类
+    const char *superCharName = class_getName(class_getSuperclass(self.ps.class));
+    NSString *superName = [NSString stringWithCString:superCharName encoding:NSUTF8StringEncoding];
+    NSLog(@"获取父类类名:%@",superName);
+    [str appendFormat:@"获取父类类名:%@\n",superName];
+    NSLog(@"=================\n");
+    
+    //是否是元类
+    BOOL isMeta = class_isMetaClass(self.ps.class);
+    [str appendFormat:@"%@是否是元类:%@\n",name,isMeta?@"是":@"否"];
+    NSLog(@"=================\n");
+    
+    //获取元类（objc_方法)
+    Class metaClass = objc_getMetaClass(charName);
+    const char *charMetaClassName = class_getName(metaClass);
+    NSString *metaName = [NSString stringWithCString:charMetaClassName encoding:NSUTF8StringEncoding];
+    [str appendFormat:@"%@的元类名:%@;是否是元类:%@\n",name,metaName,class_isMetaClass(metaClass)?@"是":@"否"];
+    NSLog(@"=================\n");
+    
+    //变量实例大小
+    [str appendFormat:@"%@的变量实例大小:%zu\n",name,class_getInstanceSize(self.ps.class)];
+    NSLog(@"=================\n");
+    
+    //获取指定名称的实例
+    Ivar ivar = class_getInstanceVariable(self.ps.class, "_name");
+    if (ivar != NULL) {
+        [str appendFormat:@"获取%@类中指定_name的实例:%s\n",name,ivar_getName(ivar)];
+    }
+    NSLog(@"=================\n");
+    // 协议
+    unsigned outCount;
+    Protocol * __unsafe_unretained * protocols = class_copyProtocolList(self.ps.class, &outCount);
+    Protocol * protocol;
+    for (int i = 0; i < outCount; i++) {
+        protocol = protocols[i];
+         [str appendFormat:@"获取%@类中遵循的协议名%s\n",name,protocol_getName(protocol)];
+    }
+    BOOL isConforms = class_conformsToProtocol(self.ps.class, protocol);
+    [str appendFormat:@"获取%@类是否遵循了%s协议:%@\n",name,protocol_getName(protocol),isConforms ? @"是":@"否"];
+    NSLog(@"=================\n");
+    self.textView.text = [str copy];
+}
+结果：
 
+```
+获取类名:Person
+
+获取父类类名:NSObject
+
+Person是否是元类:否
+
+Person的元类名:Person;是否是元类:是
+
+Person的变量实例大小:48
+
+获取Person类中指定_name的实例:_name
+
+获取Person类中遵循的协议名NSCopying
+
+获取Person类是否遵循了NSCopying协议:是
+```
+
+```
+### 动态创建类和对象
+runtime的强大之处在于它能在运行时创建类和对象。
+#### 动态创建类
+动态创建类涉及到以下几个函数：
+
+```objc
+// 创建一个新类和元类
+Class objc_allocateClassPair ( Class superclass, const char *name, size_t extraBytes );
+// 销毁一个类及其相关联的类
+void objc_disposeClassPair ( Class cls );
+// 在应用中注册由objc_allocateClassPair创建的类
+void objc_registerClassPair ( Class cls );
+```
+
+`objc_allocateClassPair`函数：如果我们要创建一个根类，则`superclass`指定为Nil。`extraBytes`通常指定为0，该参数是分配给类和元类对象尾部的索引`ivars`的字节数。
+为了创建一个新类，我们需要调用`objc_allocateClassPair`。然后使用诸如`class_addMethod`，`class_addIvar`等函数来为新创建的类添加方法、实例变量和属性等。完成这些后，我们需要调用`objc_registerClassPair`函数来注册类，之后这个新类就可以在程序中使用了。
+
+实例方法和实例变量应该添加到类自身上，而类方法应该添加到类的元类上。
+
+`objc_disposeClassPair`函数用于销毁一个类，不过需要注意的是，如果程序运行中还存在类或其子类的实例，则不能调用针对类调用该方法。
+在前面介绍元类时，我们已经有接触到这几个函数了，在此我们再举个实例来看看这几个函数的使用。
+```objc
+- (void)dynamicCreateClass
+{
+    //创建一个继承自self.ps的类SubClass
+    Class subClass = objc_allocateClassPair(self.ps.class, "SubClass", 0);
+    void(^block)(void) = ^(){
+        NSLog(@"block 调用");
+    };
+    
+    IMP imp_subMethod = imp_implementationWithBlock(block);
+    //向SubClass中添加方法
+    class_addMethod(subClass, @selector(addMethod), imp_subMethod, "v@:");
+    //添加实例变量
+    class_addIvar(subClass, "_ivar1", sizeof(NSString *), log(sizeof(NSString *)), @encode(NSString *));
+    
+    //添加属性
+    objc_property_attribute_t type = {"T", "@\"NSString\""};
+    objc_property_attribute_t ownership = { "C", "" };
+    objc_property_attribute_t backingivar = { "V", "_ivar1"};
+    objc_property_attribute_t attrs[] = {type, ownership, backingivar};
+    class_addProperty(subClass, "property2", attrs, 3);
+    
+    //注册
+    objc_registerClassPair(subClass);
+    
+    //创建类的实例
+    id instance = [[subClass alloc] init];
+    [instance performSelector:@selector(addMethod)];
+    [instance setValue:@"hello world" forKey:@"_ivar1"];
+    
+    NSLog(@"_ivar1======%@===",[instance valueForKey:@"_ivar1"]);
+}
+```
+#### 动态创建对象
+
+动态创建对象的函数如下：
+```objc
+// 创建类实例
+id class_createInstance ( Class cls, size_t extraBytes );
+// 在指定位置创建类实例
+id objc_constructInstance ( Class cls, void *bytes );
+// 销毁类实例
+void * objc_destructInstance ( id obj );
+```
+`class_createInstance`函数：创建实例时，会在默认的内存区域为类分配内存。`extraBytes`参数表示分配的额外字节数。这些额外的字节可用于存储在类定义中所定义的实例变量之外的实例变量。该函数在ARC环境下无法使用。
+调用`class_createInstance`的效果与`+alloc`方法类似。不过在使用`class_createInstance`时，我们需要确切的知道我们要用它来做什么。在下面的例子中，我们用`NSString`来测试一下该函数的实际效果：
+```objc
+- (void)dynamicInstance
+{
+    id theObject = class_createInstance(NSString.class, sizeof(unsigned));
+    
+    id str1 = [theObject init];
+    NSLog(@"%@", [str1 class]);
+    id str2 = [[NSString alloc] initWithString:@"test"];
+    NSLog(@"%@", [str2 class]);
+}
+```
+输出结果是：
+
+```objc
+ NSString
+ __NSCFConstantString
+ ```
+
+可以看到，使用`class_createInstance`函数获取的是`NSString`实例，而不是类簇中的默认占位符类`__NSCFConstantString`。
+
+`objc_constructInstance`函数：在指定的位置(bytes)创建类实例。
+
+`objc_destructInstance`函数：销毁一个类的实例，但不会释放并移除任何与其相关的引用。
+
+
+### 实例操作函数
+实例操作函数主要是针对我们创建的实例对象的一系列操作函数，我们可以使用这组函数来从实例对象中获取我们想要的一些信息，如实例对象中变量的值。这组函数可以分为三小类：
+
+1.针对整个对象进行操作的函数，这类函数包含
+```objc
+// 返回指定对象的一份拷贝
+id object_copy ( id obj, size_t size );
+// 释放指定对象占用的内存
+id object_dispose ( id obj );
+```
+上面个两个方法在ARC模式下不可用
+
+2.针对对象实例变量进行操作的函数，这类函数包含：
+```objc
+// 修改类实例的实例变量的值
+Ivar object_setInstanceVariable ( id obj, const char *name, void *value ); //ARC模式下不可用
+// 获取对象实例变量的值
+Ivar object_getInstanceVariable ( id obj, const char *name, void **outValue );//ARC模式下不可用
+// 返回指向给定对象分配的任何额外字节的指针
+void * object_getIndexedIvars ( id obj );//ARC模式下不可用
+// 返回对象中实例变量的值
+id object_getIvar ( id obj, Ivar ivar );
+// 设置对象中实例变量的值
+void object_setIvar ( id obj, Ivar ivar, id value );
+```
+3.针对对象的类进行操作的函数，这类函数包含：
+```objc
+// 返回给定对象的类名
+const char * object_getClassName ( id obj );
+// 返回对象的类
+Class object_getClass ( id obj );
+// 设置对象的类
+Class object_setClass ( id obj, Class cls );
+
+```
+### 获取类定义
+Objective-C动态运行库会自动注册我们代码中定义的所有的类。我们也可以在运行时创建类定义并使用objc_addClass函数来注册它们。runtime提供了一系列函数来获取类定义相关的信息，这些函数主要包括：
+```objc
+// 获取已注册的类定义的列表
+int objc_getClassList ( Class *buffer, int bufferCount );
+// 创建并返回一个指向所有已注册类的指针列表
+Class * objc_copyClassList ( unsigned int *outCount );
+// 返回指定类的类定义
+Class objc_lookUpClass ( const char *name );
+Class objc_getClass ( const char *name );
+Class objc_getRequiredClass ( const char *name );
+// 返回指定类的元类
+Class objc_getMetaClass ( const char *name );
+```
+`objc_getClassList`函数：获取已注册的类定义的列表。我们不能假设从该函数中获取的类对象是继承自NSObject体系的，所以在这些类上调用方法是，都应该先检测一下这个方法是否在这个类中实现。
+下面代码演示了该函数的用法：
+```objc
+int numClasses;
+Class * classes = NULL;
+numClasses = objc_getClassList(NULL, 0);
+if (numClasses > 0) {
+    classes = malloc(sizeof(Class) * numClasses);
+    numClasses = objc_getClassList(classes, numClasses);
+    NSLog(@"number of classes: %d", numClasses);
+    for (int i = 0; i < numClasses; i++) {
+        Class cls = classes[i];
+        NSLog(@"class name: %s", class_getName(cls));
+    }
+    free(classes);
+}
+
+```
+获取类定义的方法有三个：`objc_lookUpClass`, `objc_getClass`和`objc_getRequiredClass`。如果类在运行时未注册，则`objc_lookUpClass`会返回nil，而`objc_getClass`会调用类处理回调，并再次确认类是否注册，如果确认未注册，再返回nil。而`objc_getRequiredClass`函数的操作与`objc_getClass`相同，只不过如果没有找到类，则会杀死进程。
+
+`objc_getMetaClass`函数：如果指定的类没有注册，则该函数会调用类处理回调，并再次确认类是否注册，如果确认未注册，再返回nil。不过，每个类定义都必须有一个有效的元类定义，所以这个函数总是会返回一个元类定义，不管它是否有效。
+
+## 小结
+在这一章中我们介绍了Runtime运行时中与类和对象相关的数据结构，通过这些数据函数，我们可以管窥Objective-C底层面向对象实现的一些信息。另外，通过丰富的操作函数，可以灵活地对这些数据进行操作。
 ## QA
 
 1、用分类给NSObject添加一个实例方法（例如`- (void)dm_instanceMethod`），用类调用的方式调用该方法(`[NSObject dm_instanceMethod]`)会发生什么？
