--- a/Blog/themes/next/languages/zh-Hans.yml
+++ b/Blog/themes/next/languages/zh-Hans.yml
@@ -10,6 +10,9 @@ menu:
   home: 首页
   archives: 归档
   categories: 分类
+  tool: 工具
+  shell: shell
+  Objective-C: Objective-C
   tags: 标签
   about: 关于
   search: 搜索
