--- a/Blog/source/_posts/事件传递与视图响应.md
+++ b/Blog/source/_posts/事件传递与视图响应.md
@@ -38,6 +38,7 @@ view 不能处理触摸事件的情况：
 ```
 
 模拟系统，实现hitTest方法
+
 ```Objective-C
 - (nullable UIView *)hitTest:(CGPoint)point withEvent:(nullable UIEvent *)event
 {
@@ -59,5 +60,36 @@ view 不能处理触摸事件的情况：
         }
     }
     return self;
+}
+```
+
+当一个View的超出了它的父视图，点击时，是无法接受事件的，如果想让它接收事件，可以通过下面方式实现
+
+{% asset_img event_example 实例1 %}
+
+代码实现如下
+
+```Objective-C
+//BottomView.m中
+
+//方式一：
+- (UIView *)hitTest:(CGPoint)point withEvent:(UIEvent *)event
+{
+    CGPoint scantPoint = [self convertPoint:point toView:self.scanBtn];
+    if ([self.scanBtn pointInside:scantPoint withEvent:event]) {
+        return self.scanBtn;
+    } else {
+        return [super hitTest:point withEvent:event];
+    }
+}
+
+//方式二：
+- (BOOL)pointInside:(CGPoint)point withEvent:(UIEvent *)event
+{
+    CGPoint scantPoint = [self convertPoint:point toView:self.scanBtn];
+    if ([self.scanBtn pointInside:scantPoint withEvent:event]) {
+        return YES;
+    }
+    return [super pointInside:point withEvent:event];
 }
 ```
