--- a/Blog/source/_posts/深拷贝与浅拷贝.md
+++ b/Blog/source/_posts/深拷贝与浅拷贝.md
@@ -60,7 +60,7 @@ copy方法返回的都是不可变对象
 对于集合类型的进行copy或mutableCopy都不会影响集合中元素的指针
 
 ```
-- (void)test
+- (void)test1
 {
     NSString *str1 = @"hello";
     NSString *str2 = @"world";
@@ -76,4 +76,22 @@ copy方法返回的都是不可变对象
      0x102f64108==0x102f64188;hello==hello
      */
 }
+
+- (void)test2
+{
+    NSMutableString *mutableStr1 = [[NSMutableString alloc] initWithString:@"hello"];
+    NSMutableString *mutableStr2 = [[NSMutableString alloc] initWithString:@"world"];
+    NSMutableArray *mutableArr = [[NSMutableArray alloc] initWithObjects:mutableStr1,mutableStr2, nil];
+    NSLog(@"%p==%p",mutableArr.firstObject,mutableArr[1]);
+    
+    NSArray *mutableCopyArr = [mutableArr copy];//与[mutableArr copy]效果一样
+    [mutableStr1 appendString:@"--"];
+    NSLog(@"%p==%p==%p==%p;%@==%@",mutableArr.firstObject,mutableArr[1],mutableCopyArr.firstObject,mutableCopyArr[1],mutableArr.firstObject,mutableCopyArr.firstObject);
+    /*
+     0x600000241fb0==0x6000002402a0
+     0x600000241fb0==0x6000002402a0==0x600000241fb0==0x6000002402a0;hello--==hello--
+     */
+}
 ```
+
+[Demo](https://github.com/leoliuyt/DMCopy.git)
