--- a/Blog/source/_posts/内存管理.md
+++ b/Blog/source/_posts/内存管理.md
@@ -293,6 +293,7 @@ _objc_rootDealloc(id obj)
 inline void
 objc_object::rootDealloc()
 {
+    //如果使用了TaggedPointer就直接返回，交给栈自己处理
     if (isTaggedPointer()) return;  // fixme necessary?
 
     if (fastpath(isa.nonpointer  &&  
@@ -509,6 +510,132 @@ weak_register_no_lock(weak_table_t *weak_table, id referent_id,
     return referent_id;
 }
 ```
+## autoreleasepool
+
+autoreleasepool 是没有单独的内存结构的，它是通过以 AutoreleasePoolPage 为结点的双向链表来实现的。我们打开 runtime 的源码工程，在 NSObject.mm 文件的第 438-932 行可以找到 autoreleasepool 的实现源码。通过阅读源码，我们可以知道：
+
+- 每一个线程的 autoreleasepool 其实就是一个指针的堆栈；
+- 每一个指针代表一个需要 release 的对象或者 POOL_SENTINEL（哨兵对象，代表一个 autoreleasepool 的边界）；
+- 一个 pool token 就是这个 pool 所对应的 POOL_SENTINEL 的内存地址。当这个 pool 被 pop 的时候，所有内存地址在 pool token 之后的对象都会被 release ；
+- 这个堆栈被划分成了一个以 page 为结点的双向链表。pages 会在必要的时候动态地增加或删除；
+- Thread-local storage（线程局部存储）指向 hot page ，即最新添加的 autoreleased 对象所在的那个 page 。
+
+一个空的 AutoreleasePoolPage 的内存结构如下图所示：
+
+```C
+    magic_t const magic;
+    id *next;//栈结构中的下一个位置的指针;指向最新添加的 autoreleased 对象的下一个位置，初始化时指向 begin() ；
+    pthread_t const thread;//与线程一一对应;指向当前线程
+    AutoreleasePoolPage * const parent;//父节点
+    AutoreleasePoolPage *child;//子节点
+    uint32_t const depth;//代表深度，从 0 开始，往后递增 1；
+    uint32_t hiwat;//代表 high water mark
+```
+
+当 next == begin() 时，表示 AutoreleasePoolPage 为空；当 next == end() 时，表示 AutoreleasePoolPage 已满。
+
+这段代码
+
+```Objective-C
+@autoreleasepool{
+    NSMutableArray *arr = [NSMutableArray array];
+    NSLog(@"%@",arr);
+}
+```
+经过clang编译后
+
+```C
+/* @autoreleasepool */{ __AtAutoreleasePool __autoreleasepool; 
+    NSMutableArray *arr = ((NSMutableArray * _Nonnull (*)(id, SEL))(void *)objc_msgSend)((id)objc_getClass("NSMutableArray"), sel_registerName("array"));
+    NSLog((NSString *)&__NSConstantStringImpl__var_folders_cf_2w9p9n251x9b1gvcyt1p8tbw0000gp_T_Test_fb1412_mi_0,arr);
+    }
+
+extern "C" __declspec(dllimport) void * objc_autoreleasePoolPush(void);
+extern "C" __declspec(dllimport) void objc_autoreleasePoolPop(void *);
+
+struct __AtAutoreleasePool {
+  __AtAutoreleasePool() {atautoreleasepoolobj = objc_autoreleasePoolPush();}
+  ~__AtAutoreleasePool() {objc_autoreleasePoolPop(atautoreleasepoolobj);}
+  void * atautoreleasepoolobj;
+};
+
+```
+不得不说，苹果对 `@autoreleasepool {} `的实现真的是非常巧妙，真正可以称得上是代码的艺术。苹果通过声明一个 `__AtAutoreleasePool` 类型的局部变量 `__autoreleasepool` 来实现 `@autoreleasepool {}` 。当声明 `__autoreleasepool` 变量时，构造函数 `__AtAutoreleasePool()` 被调用，即执行 `atautoreleasepoolobj = objc_autoreleasePoolPush();` ；当出了当前作用域时，析构函数` ~__AtAutoreleasePool() `被调用，即执行 `objc_autoreleasePoolPop(atautoreleasepoolobj); `。也就是说 `@autoreleasepool {} `的实现代码可以进一步简化如下：
+
+```Objective-C
+/* @autoreleasepool */ {
+    void *atautoreleasepoolobj = objc_autoreleasePoolPush();
+    // 用户代码，所有接收到 autorelease 消息的对象会被添加到这个 autoreleasepool 中
+    objc_autoreleasePoolPop(atautoreleasepoolobj);
+}
+```
+因此，单个` autoreleasepool` 的运行过程可以简单地理解为 `objc_autoreleasePoolPush()`、`[对象 autorelease]` 和 `objc_autoreleasePoolPop(void *)` 三个过程。
+
+### push 操作
+
+提到的 `objc_autoreleasePoolPush() `函数本质上就是调用的 `AutoreleasePoolPage` 的 `push` 函数。
+
+```
+void *
+objc_autoreleasePoolPush(void)
+{
+    return AutoreleasePoolPage::push();
+}
+
+void
+objc_autoreleasePoolPop(void *ctxt)
+{
+    AutoreleasePoolPage::pop(ctxt);
+}
+```
+一个 `push` 操作其实就是创建一个新的 `autoreleasepool `，对应 `AutoreleasePoolPage` 的具体实现就是往 `AutoreleasePoolPage` 中的 `next` 位置插入一个 `POOL_SENTINEL` ，并且返回插入的 `POOL_SENTINEL` 的内存地址。这个地址也就是我们前面提到的 `pool token` ，在执行 `pop` 操作的时候作为函数的入参。
+
+```
+static inline void *push()
+{
+    id *dest = autoreleaseFast(POOL_SENTINEL);
+    assert(*dest == POOL_SENTINEL);
+    return dest;
+}
+
+static inline id *autoreleaseFast(id obj)
+{
+    AutoreleasePoolPage *page = hotPage();
+    if (page && !page->full()) {
+        return page->add(obj);
+    } else if (page) {
+        return autoreleaseFullPage(obj, page);
+    } else {
+        return autoreleaseNoPage(obj);
+    }
+}
+```
+autoreleaseFast 函数在执行一个具体的插入操作时，分别对三种情况进行了不同的处理：
+
+- 当前 page 存在且没有满时，直接将对象添加到当前 page 中，即 next 指向的位置；
+- 当前 page 存在且已满时，创建一个新的 page ，并将对象添加到新创建的 page 中；
+- 当前 page 不存在时，即还没有 page 时，创建第一个 page ，并将对象添加到新创建的 page 中。
+
+每调用一次 push 操作就会创建一个新的 autoreleasepool ，即往 AutoreleasePoolPage 中插入一个 POOL_SENTINEL ，并且返回插入的 POOL_SENTINEL 的内存地址。
+
+### autorelease 操作
+
+AutoreleasePoolPage 的 autorelease 函数的实现对我们来说就比较容量理解了，它跟 push 操作的实现非常相似。只不过 push 操作插入的是一个 POOL_SENTINEL ，而 autorelease 操作插入的是一个具体的 autoreleased 对象。
+
+```
+static inline id autorelease(id obj)
+{
+    assert(obj);
+    assert(!obj->isTaggedPointer());
+    id *dest __unused = autoreleaseFast(obj);
+    assert(!dest  ||  *dest == obj);
+    return obj;
+}
+```
+### pop 操作
+pop 函数的入参就是 push 函数的返回值，也就是 POOL_SENTINEL 的内存地址，即 pool token 。当执行 pop 操作时，内存地址在 pool token 之后的所有 autoreleased 对象都会被 release 。直到 pool token 所在 page 的 next 指向 pool token 为止。
+
+每一个 autoreleasepool 只对应一个线程
 
 ## 参考
 
