--- a/Blog/source/_posts/运行时之一：类与对象.md
+++ b/Blog/source/_posts/运行时之一：类与对象.md
@@ -43,8 +43,8 @@ struct objc_class {
 
 ```
 在这个定义中，面几个字段是我们感兴趣的：
-1. `isa`: 需要注意的是在Objective-C中，所有的类自身也是一个对象，这个对象的`Class里面也有一个`isa`指针，它指向`metaClass`（元类）。
-2. `super_class`: 指向该类的父类，如果该类已经是最顶层的根类(如NSObject或NSProxy)，则super_class为NULL。
+1. `isa`: 需要注意的是在Objective-C中，所有的类自身也是一个对象，这个对象的`Class`里面也有一个`isa`指针，它指向`metaClass`（元类）。
+2. `super_class`: 指向该类的父类，如果该类已经是最顶层的根类(如NSObject或NSProxy)，则`super_class`为NULL。
 3. `name`: 类名
 4. `version`: 我们可以使用这个字段来提供类的版本信息。这对于对象的序列化非常有用，它可是让我们识别出不同类定义版本中实例变量布局的改变。
 5. `ivars`: 成员变量列表
