--- a/Blog/source/_posts/网络知识.md
+++ b/Blog/source/_posts/网络知识.md
@@ -44,6 +44,22 @@ POST：用来处理资源
 4xx:这类的状态码代表了客户端看起来可能发生了错误，妨碍了服务器的处理。
 5xx:表示服务器无法完成明显有效的请求。[56]这类状态码代表了服务器在处理请求的过程中有错误或者异常状态发生
 
+1xx：指示信息--表示请求已接收，继续处理。
+2xx：成功--表示请求已被成功接收、理解、接受。
+3xx：重定向--要完成请求必须进行更进一步的操作。
+4xx：客户端错误--请求有语法错误或请求无法实现。
+5xx：服务器端错误--服务器未能实现合法的请求。
+
+常见状态代码、状态描述的说明如下。
+
+200 OK：客户端请求成功。
+400 Bad Request：客户端请求有语法错误，不能被服务器所理解。
+401 Unauthorized：请求未经授权，这个状态代码必须和WWW-Authenticate报头域一起使用。
+403 Forbidden：服务器收到请求，但是拒绝提供服务。
+404 Not Found：请求资源不存在，举个例子：输入了错误的URL。
+500 Internal Server Error：服务器发生不可预期的错误。
+503 Server Unavailable：服务器当前不能处理客户端的请求，一段时间后可能恢复正常，举个例子：HTTP/1.1 200 OK（CRLF）
+
 连接建立流程
 
 {% asset_img http.png http连接建立流程 %}
@@ -208,9 +224,17 @@ didReceiveChallenge:(NSURLAuthenticationChallenge *)challenge
 
 
 ## 参考
+
 [关于HTTPS通信和证书验证的流程](https://blog.csdn.net/u012858858/article/details/73716105)
+
 [数字证书原理](http://www.cnblogs.com/JeffreySun/archive/2010/06/24/1627247.html)
+
 [iOS 中可用的受信任根证书列表](https://support.apple.com/zh-cn/HT204132)
+
 [HTTPS的建立流程](https://segmentfault.com/a/1190000000476876)
+
 [图解SSL/TLS协议](http://www.ruanyifeng.com/blog/2014/09/illustration-ssl.html)
+
 [图解 HTTPS：Charles 捕获 HTTPS 的原理](https://github.com/youngwind/blog/issues/108)
+
+[HTTP请求报文和HTTP响应报文](http://www.cnblogs.com/biyeymyhjob/archive/2012/07/28/2612910.html)
