--- a/Blog/source/_posts/网络知识.md
+++ b/Blog/source/_posts/网络知识.md
@@ -44,12 +44,6 @@ POST：用来处理资源
 4xx:这类的状态码代表了客户端看起来可能发生了错误，妨碍了服务器的处理。
 5xx:表示服务器无法完成明显有效的请求。[56]这类状态码代表了服务器在处理请求的过程中有错误或者异常状态发生
 
-1xx：指示信息--表示请求已接收，继续处理。
-2xx：成功--表示请求已被成功接收、理解、接受。
-3xx：重定向--要完成请求必须进行更进一步的操作。
-4xx：客户端错误--请求有语法错误或请求无法实现。
-5xx：服务器端错误--服务器未能实现合法的请求。
-
 常见状态代码、状态描述的说明如下。
 
 200 OK：客户端请求成功。
@@ -92,8 +86,24 @@ Charles的抓包原理
 
 利用http的中间人攻击来实现的
 
-{% asset_img middle 中间人攻击 %}
+{% asset_img middle.png 中间人攻击 %}
 
+#### Cookie/Session
+
+Cookie保存在客户端，主要用来记录用户状态，区分用户
+
+修改Cookie：
+新cookie覆盖旧cookie
+删除cookie 通过expires或者maxAge
+
+保证Cookie的安全：
+
+- 对Cookie进行加密处理
+- 只在https上携带Cookie
+- 设置Cookie为httpOnly,防止跨站脚本攻击
+
+
+Session技术依赖Cookie,保存在服务端
 
 ## HTTPS
 
@@ -159,45 +169,15 @@ Hash算法特别的地方在于它是一种单向算法，用户可以通过Hash
 在证书领域，一般都是用SHA（安全哈希算法）
 加密算法的效能通常可以按照算法本身的复杂程度、密钥长度（密钥越长越安全）、加解密速度等来衡量。上述的算法中，除了DES密钥长度不够、MD2速度较慢已逐渐被淘汰外，其他算法仍在目前的加密系统产品中使用。
 
-
-```Objective-C
-// 只要访问的是HTTPS的路径就会调用
-// 该方法的作用就是处理服务器返回的证书, 需要在该方法中告诉系统是否需要安装服务器返回的证书
-// NSURLAuthenticationChallenge : 授权质问
-//+ 受保护空间
-//+ 服务器返回的证书类型
-- (void)URLSession:(NSURLSession *)session
-didReceiveChallenge:(NSURLAuthenticationChallenge *)challenge
- completionHandler:(void (^)(NSURLSessionAuthChallengeDisposition disposition, NSURLCredential *credential))completionHandler
-{
-   //AFNetworking中的处理方式
-    NSURLSessionAuthChallengeDisposition disposition = NSURLSessionAuthChallengePerformDefaultHandling;
-    __block NSURLCredential *credential = nil;  
-    //判断服务器返回的证书是否是服务器信任的
-    if ([challenge.protectionSpace.authenticationMethod isEqualToString:NSURLAuthenticationMethodServerTrust]) {
-        credential = [NSURLCredential credentialForTrust:challenge.protectionSpace.serverTrust];
-        /*disposition：如何处理证书
-     NSURLSessionAuthChallengePerformDefaultHandling:默认方式处理
-         NSURLSessionAuthChallengeUseCredential：使用指定的证书    NSURLSessionAuthChallengeCancelAuthenticationChallenge：取消请求
-         */
-        if (credential) {
-            disposition = NSURLSessionAuthChallengeUseCredential;
-        } else {
-            disposition = NSURLSessionAuthChallengePerformDefaultHandling;
-        }
-    } else {
-        disposition = NSURLSessionAuthChallengeCancelAuthenticationChallenge;
-    }
-    //安装证书
-    if (completionHandler) {
-        completionHandler(disposition, credential);
-    }
-}
-
-```
-
-
 ## TCP / UDP
+
+网络七层协议
+
+{% asset_img net_seven.png 网络七层模型 %}
+
+网络四层协议
+
+{% asset_img net_four.png 网络四层协议 %}
 
 传输层协议 
 - TCP 传输控制协议
@@ -213,15 +193,73 @@ didReceiveChallenge:(NSURLAuthenticationChallenge *)challenge
     - 既不合并，也不拆分
 
 功能：
-
-复用
-分用
-差错检测 
+- 复用
+- 分用
+- 差错检测 
 
 {% asset_img multiplexing.png 复用%}
 
 {% asset_img demultiplexing.png 分用%}
 
+### TCP
+
+特点
+- 面向连接：数据传输前，建立连接（三次握手，四次挥手）
+- 可靠传输：无差错、不丢失、不重复、按序到达（通过停止等待协议实现）
+- 面向字节流
+- 流量控制（滑动窗口协议）
+- 拥塞控制（慢开始,拥塞避免 快恢复,快重传）
+
+三次握手为什么不是两次
+
+为了解决SYN请求超时的情况，防止重复建立连接。
+
+客户端发送SYN 超时后，客户端会重传，如果只有两次握手，重传后，客户端发送SYN和ACK，建立连接，但这时超时的SYN到达后，服务端又会重新发送SYN和ACK，又一次建立了连接，这不是我们所期望的。
+如果是三次握手的情况可以规避这种问题，重传后，客户端发送了ACK确认报文给服务端，然后建立连接，当超时报文到达后，服务端又会重新发送SYN和ACK，客户端不会再发送ACK给服务端，服务端就可知道这个一个超时报文。
+
+## DNS
+
+### DNS解析
+
+DNS解析是域名到IP地址的映射过程，DNS解析请求采用UDP数据报，且是明文的。
+
+{% asset_img dns_parse.png DNS解析过程 %}
+
+### DNS查询方式
+
+DNS解析的查询方式分两种：
+
+- 递归查询(我去给你问一下)
+
+请求本地DNS服务器，如果没找到，本地DNS服务器就去问根DNS服务器，找到了就返回给本地DNS服务器，然后本地DNS服务器返回给Client
+
+{% asset_img dns_recursive.png 递归查询 %}
+
+- 迭代查询(我告诉你谁知道，你去问他)
+
+请求本地DNS服务器，如果没找到，本地DNS服务器就去问根DNS服务器，如果没找根DNS服务器告诉本地DNS服务器去问顶级DNS服务器，如果找到，返回给本地DNS服务器，然后本地DNS服务器返回给Client
+
+{% asset_img dns_iterative.png 递归查询 %}
+
+### DNS问题
+
+- DNS劫持
+
+{% asset_img dns_hijack.png DNS劫持流程 %}
+
+DNS劫持发生在Http连接建立之前，DNS劫持与HTTP没有关系
+DNS解析请求使用UDP数据报，使用53端口
+
+解决办法
+- httpDNS
+    使用HTTP协议向DNS服务器80端口进行请求
+- 长连接
+
+- DNS解析转发
+
+{% asset_img dns_forward DNS解析转发 %}
+
+会引起跨域访问等问题
 
 ## 参考
 
