--- a/Blog/source/_posts/事件传递与视图响应.md
+++ b/Blog/source/_posts/事件传递与视图响应.md
@@ -93,4 +93,87 @@ view 不能处理触摸事件的情况：
     return [super pointInside:point withEvent:event];
 }
 ```
+
+## 事件响应
+
+响应者链的事件传递过程:
+
+1>如果当前view是控制器的view，那么控制器就是上一个响应者，事件就传递给控制器；如果当前view不是控制器的view，那么父视图就是当前view的上一个响应者，事件就传递给它的父视图
+
+2>在视图层次结构的最顶级视图，如果也不能处理收到的事件或消息，则其将事件或消息传递给window对象进行处理
+
+3>如果window对象也不处理，则其将事件或消息传递给`UIApplication`对象
+
+4>如果`UIApplicatio`n也不能处理该事件或消息，则将其丢弃
+
+{% asset_img ResponderChain_2.png 事件响应 %}
+
+## 总结
+
+事件处理的整个流程总结:
+
+1.触摸屏幕产生触摸事件后，触摸事件会被添加到由UIApplication管理的事件队列中（即，首先接收到事件的是UIApplication）。
+
+2.UIApplication会从事件队列中取出最前面的事件，把事件传递给应用程序的主窗口（keyWindow）。
+
+3.主窗口会在视图层次结构中找到一个最合适的视图来处理触摸事件。（至此，第一步已完成)
+
+4.最合适的view会调用自己的touches方法处理事件
+
+5.touches默认做法是把事件顺着响应者链条向上抛。
+
+事件的传递和响应的区别：
+
+- 事件的传递是从上到下（父控件到子控件）
+- 事件的响应是从下到上（顺着响应者链条向上传递：子控件到父控件)
+
+## QA
+
+Q:增大Button的点击区域
+
+A:
+
+重写Button的`pointInside`方法
+
+```Objective-C
+- (BOOL)pointInside:(CGPoint)point withEvent:(UIEvent *)event
+{
+    NSLog(@"%@",NSStringFromCGPoint(point));
+    if (point.x < 0 && fabs(point.x) > self.exInsets.left) {
+        return [super pointInside:point withEvent:event];
+    } else if(point.x > 0 && point.x-CGRectGetWidth(self.frame) > self.exInsets.right){
+        return [super pointInside:point withEvent:event];
+    } else if(point.y < 0 && fabs(point.y) > self.exInsets.top){
+        return [super pointInside:point withEvent:event];
+    } else if (point.y > 0 && point.y - CGRectGetHeight(self.frame) > self.exInsets.bottom){
+        return [super pointInside:point withEvent:event];
+    } else {
+        return YES;
+    }
+}
+```
+Q: 通过View找到它所在的ViewController
+
+A:
+
+通过`nextResponder`方法找到响应链中的VC
+
+```Objective-C
+@implementation UIView (DM)
+
+- (UIViewController *)findViewController:(Class)aClass
+{
+    id responder = self;
+    while (responder) {
+         NSLog(@"%@",responder);
+        if ([responder isKindOfClass:aClass]) {
+            return responder;
+        }
+        responder = [responder nextResponder];
+    }
+    return nil;
+}
+@end
+```
+
 [Demo](https://github.com/leoliuyt/DMEventDeliver)
