--- a/Blog/source/_posts/运行时之二：分类.md
+++ b/Blog/source/_posts/运行时之二：分类.md
@@ -302,9 +302,9 @@ void attachLists(List* const * addedLists, uint32_t addedCount) {
 
 编译顺序|打印结果|说明
 ---|---|---
-{% asset_img compile_order_1.png %} | MyClass:+[MyClass load]<br>MyClass+Test2:+[MyClass(Test2) load]<br>MyClass+Test1:+[MyClass(Test1) load] | 原来最先加载，分类的加载顺序与编译顺序相同
-{% asset_img compile_order_2.png %} | MyClass:+[MyClass load]<br>MyClass+Test1:+[MyClass(Test1) load]<br>MyClass+Test2:+[MyClass(Test2) load] | 原来最先加载，分类的加载顺序与编译顺序相同
-{% asset_img compile_order_3.png %} | MyClass:+[MyClass load]<br>MyClass+Test2:+[MyClass(Test2) load]<br>MyClass+Test1:+[MyClass(Test1) load] | 原来最先加载，分类的加载顺序与编译顺序相同
+{% asset_img compile_order_1.png %} | MyClass:+[MyClass load]<br>MyClass+Test2:+[MyClass(Test2) load]<br>MyClass+Test1:+[MyClass(Test1) load] | 原类最先加载，分类的加载顺序与编译顺序相同
+{% asset_img compile_order_2.png %} | MyClass:+[MyClass load]<br>MyClass+Test1:+[MyClass(Test1) load]<br>MyClass+Test2:+[MyClass(Test2) load] | 原类最先加载，分类的加载顺序与编译顺序相同
+{% asset_img compile_order_3.png %} | MyClass:+[MyClass load]<br>MyClass+Test2:+[MyClass(Test2) load]<br>MyClass+Test1:+[MyClass(Test1) load] | 原类最先加载，分类的加载顺序与编译顺序相同
 
 `+(void)initialize`只有在第一次被使用是会调用一次且仅一次，其他与普通方法相同
 
@@ -341,11 +341,11 @@ OBJC_PRINT_REPLACED_METHODS YES
 
 配置如图（更多的环境变量选项可参见objc-private.h）
 
-{% asset_img scheme_config xcode配置 %}
+{% asset_img scheme_config.png xcode配置 %}
 
 打印结果如下：
 
-{% asset_img scheme_config_result 结果 %}
+{% asset_img scheme_config_result.png 结果 %}
 
 结合当前的编译顺序如下：
 
