--- a/Blog/source/_posts/算法.md
+++ b/Blog/source/_posts/算法.md
@@ -21,6 +21,10 @@ categories:
 
 - 归并排序
 
+{% asset_img sort_compare.png 排序算法比较 %}
+
+{% asset_img big_o.png bigO %}
+
 ### 交换排序
 
 交换排序的基本思想都为通过比较两个数的大小，当满足某些条件时对它进行交换从而达到排序的目的。
