--- a/Blog/source/_posts/算法.md
+++ b/Blog/source/_posts/算法.md
@@ -457,3 +457,5 @@ void printMergeSort(int *arr, int count, int n){
 ## 参考
 
 [七大经典排序算法总结(C语言描述)](https://www.cnblogs.com/maluning/p/7944809.html)
+
+[What is a plain English explanation of “Big O” notation?](https://stackoverflow.com/questions/487258/what-is-a-plain-english-explanation-of-big-o-notation?noredirect=1&lq=1)
