--- a/Blog/source/_posts/网络知识.md
+++ b/Blog/source/_posts/网络知识.md
@@ -257,7 +257,7 @@ DNS解析请求使用UDP数据报，使用53端口
 
 - DNS解析转发
 
-{% asset_img dns_forward DNS解析转发 %}
+{% asset_img dns_forward.png DNS解析转发 %}
 
 会引起跨域访问等问题
 
